--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
-SECRET_KEY=123456
+JWT_SECRET=123456
 NODE_ENV=development
 MONGO_URL=mongodb+srv://maximostrovskiy86:RUFsLoVfS5J9GFwJ@cluster0.ofcuk4d.mongodb.net/
