--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "npx eslint src --fix"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
     "nanoid": "^5.1.5",
