--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "~1.9.1",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
-    "webpack": "^5.99.9"
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
